# aurora

./: .buildinfo  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  LICENCE.txt  LICENSE.txt  Makefile  README.md  _docker_requirements.txt  ai_models_plugin.html  api.html  basic_usage.html  batch.html  beware.html  example.html  example_cams.html  example_era5.html  example_hres_0.1.html  example_hres_t0.html  example_tc_tracking.html  example_wave.html  finetuning.html  genindex.html  intro.html  models.html  objects.inv  package-mlflow.py  package_mlflow.py  pyproject.toml  search.html  searchindex.js  section.html  test.py  tracking.html  usage.html
.github/workflows/: build_docs.yaml  ci.yaml  formatting.yaml  publish.yaml
_modules/: index.html
_modules/aurora/: batch.html  rollout.html  tracker.html
_modules/aurora/model/: aurora.html
_sources/: ai_models_plugin.md  api.rst  basic_usage.md  batch.md  beware.md  example.ipynb  example_cams.ipynb  example_hres_0.1.ipynb  example_hres_t0.ipynb  example_tc_tracking.ipynb  finetuning.md  intro.md  models.md  tracking.md  usage.md
_sources/foundry/: intro.md
aurora/: __init__.py  area.py  batch.py  normalisation.py  rollout.py  tracker.py  util.py
aurora/foundry/: __init__.py
aurora/foundry/client/: api.py  foundry.py
aurora/model/: aurora.py  compat.py  decoder.py  encoder.py  film.py  fourier.py  groupedpatchembed.py  helpers.py  levelcond.py  lora.py  patchembed.py  perceiver.py  perceiver_decoder.py  perceiver_encoder.py  pos_encode.py  posencoding.py  swin3d.py  swin_3d_block.py  swin_block.py  util.py  vit_block.py
docs/: _config.yml  _toc.yml  ai_models_plugin.md  api.rst  batch.md  beware.md  create_batch_era5.py  example.ipynb  example_cams.ipynb  example_era5.ipynb  example_hresT0.ipynb  example_hres_0.1.ipynb  example_hres_0.1deg.ipynb  example_hres_t0.ipynb  example_tc_tracking.ipynb  example_wave.ipynb  example_waves.ipynb  finetuning.md  intro.md  models.md  section.md  torch_profiler_batch_forward.py  tracking.md  usage.md
docs/foundry/: api.rst  demo_hres_t0.ipynb  intro.md  server.md  submission.md
finetuning/: Dockerfile  finetune.py
foundry/: api.html  demo_hres_t0.html  intro.html  server.html  submission.html
paper/: index.html
tests/: __init__.py  conftest.py  test_batch.py  test_checkpoint_adaptation.py  test_core.py  test_headers.py  test_model.py  test_rollout.py
tests/foundry/: __init__.py  azcopy.py  conftest.py  docker_server_hook.py  runner.py  test_api.py
(+16 files in other folders)
